--- a/index.html
+++ b/index.html
@@ -2,4 +2,13 @@
 
 <div class="p-5">
     <h1>Karen Song</h1>
+    <h5>
+        <ul>
+            <li>Bio</li>
+            <li>Writing</li>
+            <li>Projects</li>
+            <li>Photography</li>
+            <li>Blog</li>
+        </ul>
+    </h5>
 </div>
