--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <li>Projects</li>
             <li>Photography</li>
             <li>Blog</li>
+            <li>Reading List</li>
         </ul>
     </h5>
 </div>
