do i rlly need to do this every time...

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <li>Photography</li>
             <li>Blog</li>
             <li>Reading List</li>
+            <li>Contact</li>
         </ul>
     </h5>
 </div>
