--- a/subpages/projects.html
+++ b/subpages/projects.html
@@ -5,15 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <title>Bio | Karen Song</title>
+    <title>Projects | Karen Song</title>
 </head>
 <div class="p-5">
-    <h1>Bio</h1>
+    <h1>Projects: Research, Personal, etc.</h1>
     <div width="40vw">
     <h5>
-      I'm a junior studying, among other subjects, Applied Math & Economics at Harvard. I'm also trying to get a language citation in German, we'll see how that goes. 
-      I was born and raised in the Washington, D.C. metro area (for those more acquainted, the "DMV"). 
-
+        <ul>
+            <li>Survey Tool</li>
+            <li>maps</li>
+        </ul>
     </h5>
 </div>
 
