--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <h5>
         <ul>
             <li><a href="subpages/bio.html">Bio</a></li>
-            <li>Writing</li>
-            <li>Projects</li>
+            <li><a href="subpages/writing.html">Writing</a></li>
+            <li><a href="subpages/projects.html">Projects</a></li>
             <li>Photography</li>
             <li>Blog</li>
-            <li>Reading List</li>
+            <li><a href="subpages/reading_list.html">Reading List</a></li>
             <li>Contact</li>
         </ul>
     </h5>
