--- a/subpages/reading_list.html
+++ b/subpages/reading_list.html
@@ -1,3 +1,27 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
+    <title>Reading List | Karen Song</title>
+</head>
+<div class="p-5">
+    <h1>What I'm Reading</h1>
+    <div width="40vw">
+    <h5>
+        <ul>
+            <li>Dec 23 - Jan 24:</li>
+            <ul>
+                <li>A Room of One's Own, Virginia Woolf</li>
+            </ul>
+        </ul>
+    </h5>
+</div>
+
+<p><a href="../index.html">Home</a></p>
+</div>
+</html>
 
 <!-- Dec 23 - Jan 24: A Room of One's Own -->
